src/tests/snapshots/niri__tests__window_opening__check_target_size@dwP0.25-t.snap
---
source: src/tests/window_opening.rs
description: "config:\nwindow-rule {\n    default-column-width { proportion 0.25; }\n    default-column-display \"tabbed\"\n}\n\nlayout {\n    tab-indicator {\n        place-within-column\n    }\n}"
expression: snapshot
---
initial configure:
size: 1264 × 704, bounds: 800 × 600, states: []

post-map configures:
size: 1264 × 704, bounds: 1264 × 704, states: [Activated]
